--- a/turan.tex
+++ b/turan.tex
@@ -612,6 +612,13 @@ and any $S\subset Q$, we define $\survivors(X,S)$ to be the subset of
 points in $Q$ that can still be played in the dot-puzzle game if the
 points is $S$ have been played in previous rounds.
 
+FIXME: The following observation is totally incorrect.  A sequence of points close to the boundary can generate a whole bunch of uncovered rectangles:
+
+\begin{center}
+   \includegraphics{figs/survivors-ce}
+\end{center}
+
+
 \begin{obs}\obslabel{swords-region}
   (Refer to \figref{survivors}.)
   For any non-empty set $S\subset Q$, $\survivors(\{\swords\},S)$ is
@@ -632,20 +639,23 @@ points is $S$ have been played in previous rounds.
 \end{figure}
 
 \begin{proof}
-  The points defining $\ymax(S)$ and $\xmin(S)$ cover everything below
-  $\ymax(S)$, except $H$, $V$, and $T$. The point defining $\ymax(S)$
-  bounds $R$ from below, the point defining $\xmax(S)$ bounds $R$ from
-  the left, and the point defining $\xmin(S)$ bounds $R$ from above.
+  The points defining $\ymax(S)$ and $\xmin(S)$ cover everything
+  below $H^{\max}$, except $H^{\min}$, $V$, and $T$.  Above $H^{\max}$,
+  the point defining $\xmax(S)$ covers everything to the left of $R$
+  and the point defining $\xmin(S)$ covers everything above $R$.  Thus,
+  everything except $T$, $R$, $V$, $H^{\min}$ and $H^{\max}$ is covered.
 \end{proof}
 
-\obsref{swords-region} gives us a form of \emph{potential function}
-that we can use.  We will apply it with $S=\bigcup_{j=1}^i Q_i$ so that as
+\obsref{swords-region} gives us a form of \emph{potential function} that
+we can use.  We will apply it with $S=\bigcup_{j=1}^i Q_j$ so that as
 rounds proceed, any time the value of $\xmax(S)$ or $\ymax(S)$ increases,
 the size of the rectangle $R$ decreases. Any time the value of $\ymin(S)$
 decreases, the size of the triangle $T$ decreases.  So that we can refer
-to these point sets as they change, we let $S_i=\bigcup_{j=1}^i Q_i$ and
-we define $T_i$, $R_i$, $V_i$, and $H_i$ as in \obsref{swords-region},
-but with respect to the set $S=S_i$.
+to these point sets as they change, we let $S_i=\bigcup_{j=1}^i Q_i$
+and we define $T_i$, $R_i$, $V_i$, $H^{\max}_i$, and $H^{\min}_i$ as in
+\obsref{swords-region}, but with respect to the set $S=S_i$. So that $V_i$
+is unambiguous, we define it as the vertical line passing through the
+rightmost point in $S_i$ whose $y$-coordinate is equal to $\ymax(S_i)$.
 
 \begin{thm}\thmlabel{taco-swords}
   $\ex'(n,\{\taco,\swords\}) \in O(n)$.
@@ -672,7 +682,7 @@ but with respect to the set $S=S_i$.
   Finally, we observe that $Q_i$ contains at most one point each from
   $H^{\min}_i$, $H^{\max}_i$, and $V_i$, so
   \[
-      \sum_{i=1}^{n}|Q_i| \le \sum_{i=1}^n(t_i+r_i+2) \le 8n \enspace . \qedhere
+      \sum_{i=1}^{n}|Q_i| \le \sum_{i=1}^n(t_i+r_i+3) \le 8n \enspace . \qedhere
   \]
 \end{proof}
 
@@ -1003,8 +1013,9 @@ in Gowers and Long \cite{gowers.long:length}.
   $\ex'(n,\{\taco,\nested\}) \in n^2/e^{\Omega(\log^* n)}$
 \end{thm}
 
-While discovering these results, we noticed that the literature is disjoint, and the relationships between some of these problems have gone unnoticed.
-Here we point out a few bibliographic notes:
+While discovering these results, we noticed that the relationships
+between some of these problems have gone unnoticed.  Here we point out
+a few bibliographic notes:
 
 \begin{itemize}
   \item  Bra\ss\ \cite{brass:turan} seems to have been unaware that
