--- a/turan.tex
+++ b/turan.tex
@@ -698,7 +698,7 @@ appear in the horizontal lines $H^{\max}_i$, $H^{\min}_i$ and $V_i$.
   the rules for $\swords$.  Then, $V_{i+1}$
   \begin{enumerate}
     \item $\xmin(S_{i+1}) \le \xmin(S_i)$;
-    \item $\ymax(S_{i+1}^*) \le \ymin(S_ii^*)$;
+    \item $\ymax(S_{i+1}^*) \le \ymin(S_ii^*t)$;
     \item $\ymax(S_{i+1}^*) \le \ymin(S_ii^*)$;
 
  
